Fix post preview text overflow

--- a/src/styles/appStyle.scss
+++ b/src/styles/appStyle.scss
@@ -5,7 +5,7 @@
   --reddit-blue: #0079d3;
   --reddit-blue-light: #579dd6;
   --reddit-blue-super-light: #ebf1f7;
-  --background-color: #dde5ed;
+  --background-color: #e6ecf2;
   --grey-dark: #878a8c;
   --up-vote-color: orange;
   font-family: "Noto Sans" Arial sans-serif;
